[package]
name = "iox-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
influxdb_iox_client = { git = "https://github.com/influxdata/influxdb_iox", features = ["flight"] }
arrow-flight = "40.0.0"
arrow = "40.0.0"
futures = "0.3.28"
